--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.11",
+    "expo-constants": "~15.4.5",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
     "react-dom": "18.2.0",
-    "react-native-web": "~0.19.6",
-    "@expo/metro-runtime": "~3.1.3",
-    "expo-router": "~3.4.8",
+    "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "sharp-cli": "^4.2.0"
   },
   "private": true
 }
