--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "govtech-oa",
+  "name": "govetech-oa",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "axios": "^1.6.7",
     "expo": "~50.0.11",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
@@ -26,5 +27,16 @@
     "@babel/core": "^7.20.0",
     "sharp-cli": "^4.2.0"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicholasohjj/govtech-oa.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nicholasohjj/govtech-oa/issues"
+  },
+  "homepage": "https://github.com/nicholasohjj/govtech-oa#readme",
+  "description": ""
 }
