--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "joi": "^17.12.2",
+    "playwright": "^1.42.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
