--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
+    "start": "concurrently \"npx expo start\" \"cd backend && npm start\"",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
